--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Liberta Global - Educação financeira" />
 	<meta property="og:description" content="Alcance sua independência financeira." />
-	<meta property="og:url" content="https://projeto.dgin.com.br" />
+	<meta property="og:url" content="https://project.dgin.com.br" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
